# partial-mcp

./: .env.example  .pre-commit-config.yaml  LICENSE  README.md  benchmark.py  pyproject.toml  pyrefly-baseline.json
services/monitoring/: compose.yaml
src/partial_mcp/: baseline_agent.py  model.py  web.py
src/partial_mcp/benchmark/: benchmark.py  dataset.py  split_tasks.json  tasks.py  user_agent.py
src/partial_mcp/mcp_servers/: __init__.py  calculator.py  disable_toolcall.py
src/partial_mcp/mcp_servers/mcp_zero/: .gitignore  mcp_zero.py  toolsets.json
src/partial_mcp/mcp_servers/retail/: agent.py  data_model.py  tools.py
src/partial_mcp/toolset/: disable_toolcall.py  toolset.py  utils.py
tests/: test_utils.py
