[project]
name = "partial-mcp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai",
    "logfire",
    "pydantic-evals[logfire]",
    "dotenv",
]

[dependency-groups]
dev = [
    "ruff>=0.12.1",
    "pyrefly",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/partial_mcp"]

